[gd_scene load_steps=10 format=3 uid="uid://cc6kmyavd64y"]

[ext_resource type="Script" path="res://scripts/camera.gd" id="1_e7bqo"]
[ext_resource type="PackedScene" uid="uid://6lmn3axmdtv8" path="res://scenes/levels/test_level.tscn" id="3_te1do"]
[ext_resource type="PackedScene" uid="uid://c7hgmmou0ia8o" path="res://scenes/player.tscn" id="5_utn1q"]
[ext_resource type="PackedScene" uid="uid://cda87mfppoffb" path="res://scenes/levels/level_0.tscn" id="6_i2owa"]
[ext_resource type="Script" path="res://scripts/level_manager.gd" id="7_0y5fu"]
[ext_resource type="Script" path="res://scripts/menus/ui.gd" id="7_x3g82"]
[ext_resource type="PackedScene" uid="uid://kmbgcemcb7pq" path="res://scenes/menus/game_over_menu.tscn" id="8_y2hx1"]
[ext_resource type="FontFile" uid="uid://t8h1shroylrt" path="res://fonts/monogram.ttf" id="9_k3u0t"]
[ext_resource type="PackedScene" uid="uid://dyo0mpj1x00rm" path="res://scenes/menus/level_over_menu.tscn" id="10_vqstw"]

[node name="Game" type="Node"]

[node name="LevelManager" type="Node2D" parent="."]
position = Vector2(-2, 0)
script = ExtResource("7_0y5fu")
starting_level_index = 1
levels = Array[PackedScene]([ExtResource("6_i2owa"), ExtResource("3_te1do")])

[node name="Camera" type="Camera2D" parent="." groups=["Camera"]]
unique_name_in_owner = true
position_smoothing_enabled = true
script = ExtResource("1_e7bqo")
scroll_speed = 125.0
screen_padding = Vector2(50, 50)
metadata/_edit_lock_ = true

[node name="Player" parent="." groups=["Player"] instance=ExtResource("5_utn1q")]
unique_name_in_owner = true
position = Vector2(-549, 0)
speed = 350.0

[node name="UI" type="CanvasLayer" parent="." groups=["UI"]]
unique_name_in_owner = true
script = ExtResource("7_x3g82")

[node name="GameOverMenu" parent="UI" instance=ExtResource("8_y2hx1")]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
offset_top = 82.0
offset_bottom = 82.0
grow_vertical = 1
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ScoreLabel" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -84.0
offset_right = 84.0
offset_bottom = 51.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("9_k3u0t")
theme_override_font_sizes/font_size = 64
text = "Score: 0"

[node name="LevelOverMenu" parent="UI" instance=ExtResource("10_vqstw")]
visible = false
offset_top = 91.0
offset_bottom = 91.0
